Fixed controller / presenter mid nav bar disappearing on small screens

--- a/improvisor/static/CSS/improvisor_styles.css
+++ b/improvisor/static/CSS/improvisor_styles.css
@@ -591,6 +591,11 @@ h3 {
         margin-right: 15px;
         font-size: 22px;
     }
+
+    .navigbar a .navigbarItemMid {
+        font-size: 17px;
+        padding: 0 5px;
+    }
 }
 
 @media screen and (max-width: 600px) {
